# dcase2024-task6-baseline

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  hubconf.py  pyproject.toml  requirements.txt
.github/workflows/: test.yaml
src/conf/: prepare.yaml  test.yaml  train.yaml
src/conf/ckpt/: custom.yaml  disabled.yaml  loss.yaml
src/conf/datamodule/: hdf.yaml
src/conf/emission/: disabled.yaml  none.yaml  offline.yaml  online.yaml
src/conf/expt/: baseline.yaml  dbg1.yaml  dbg2.yaml  dbg3.yaml  dbg4.yaml  dbg5.yaml
src/conf/hydra/: custom.yaml
src/conf/model/: baseline.yaml  pretrained.yaml  trans_decoder.yaml
src/conf/path/: local.yaml
src/conf/pre_process/: cnext.yaml  none.yaml  resample.yaml
src/conf/pre_transform/: cnext.yaml  none.yaml
src/conf/tokenizer/: baseline.yaml  pretrained.yaml  word.yaml
src/conf/trainer/: fit.yaml  fit_test.yaml
src/dcase24t6/: __init__.py  __main__.py  fit.py  info.py  prepare.py  test.py  train.py
src/dcase24t6/augmentations/: mixup.py  resample_nearest.py  speed_perturb.py
src/dcase24t6/callbacks/: ckpt.py  complexity.py  debug.py  emissions.py  evaluator.py  op_counter.py  opcounter.py
src/dcase24t6/conf/: train.yaml
src/dcase24t6/datamodules/: aac.py  hdf.py
src/dcase24t6/models/: aac.py  cnext_trans.py  trans_decoder.py
src/dcase24t6/nn/: ckpt.py  convnext.py  convnext_ckpt_utils.py  functional.py  hub.py  modules.py
src/dcase24t6/optim/: schedulers.py  utils.py
src/dcase24t6/pre_processes/: cnext.py  common.py  resample.py
src/dcase24t6/pre_transforms/: cnext.py
src/dcase24t6/tokenization/: aac_tokenizer.py
tests/: test_nn_functional.py  test_nn_hub.py  test_pre_process.py
(+26 files in other folders)
