[project]
name = "dcase24t6"
authors = [
    {name = "Étienne Labbé (Labbeti)", email = "labbeti.pub@gmail.com"},
]
description = "DCASE2024 Challenge Task 6 baseline system (Automated Audio Captioning)"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["dcase", "dcase2024", "baseline", "pytorch", "deep-learning", "audio-captioning"]
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
maintainers = [
    {name = "Étienne Labbé (Labbeti)", email = "labbeti.pub@gmail.com"},
]
dynamic = ["version", "dependencies"]

[project.urls]
Repository = "https://github.com/Labbeti/dcase2024-task6-baseline"
Changelog = "https://github.com/Labbeti/dcase2024-task6-baseline/blob/main/CHANGELOG.md"

[project.scripts]
dcase24t6-info = "dcase24t6.info:print_info"
dcase24t6-prepare = "dcase24t6.prepare:prepare"
dcase24t6-train = "dcase24t6.train:train"
dcase24t6-test = "dcase24t6.train:test"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["dcase24t6*"]  # package names should match these glob patterns (["*"] by default)

[tool.setuptools.dynamic]
version = {attr = "dcase24t6.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
pythonVersion = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
